CS1/Robert/vm2/config/iptables
# Generated by iptables-save v1.8.4 on Fri Oct  9 15:17:03 2020
*raw
:PREROUTING ACCEPT [531:613833]
:OUTPUT ACCEPT [378:46989]
COMMIT
# Completed on Fri Oct  9 15:17:03 2020
# Generated by iptables-save v1.8.4 on Fri Oct  9 15:17:03 2020
*mangle
:PREROUTING ACCEPT [531:613833]
:POSTROUTING ACCEPT [378:46989]
:INPUT ACCEPT [500:611293]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [378:46989]
COMMIT
# Completed on Fri Oct  9 15:17:03 2020
# Generated by iptables-save v1.8.4 on Fri Oct  9 15:17:03 2020
*nat
:PREROUTING ACCEPT [160:31554]
:INPUT ACCEPT [129:29014]
:POSTROUTING ACCEPT [70:4940]
:OUTPUT ACCEPT [70:4940]
COMMIT
# Completed on Fri Oct  9 15:17:03 2020
# Generated by iptables-save v1.8.4 on Fri Oct  9 15:17:03 2020
*filter
:INPUT ACCEPT [124:37911]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [319:41995]
-A INPUT -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Oct  9 15:17:03 2020
